align picture and keyborad, fix positiong >= 900px

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <div id="game">
             <div id="picture">
-                <img src="img/s0.jpg">
+                <br><img src="img/s0.jpg">
             </div>
         <div id="keyboard"></div>
         </div>
