add keyboard and passwd form reload

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <script src="hangman.js" type="text/javascript"></script>
 
     </head>
-    <body onload="create_keyboard()">
+    <body>
         <div id="passwd">
-            --BC---- -------A ----
+            <!-- --BC---- -------A ---- -->
         </div>
         <div id="game">
             <div id="picture">
