--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
             <div id="picture">
                 <img src="img/s0.jpg">
             </div>
-        <div id="keyboard"></div>
+        <div id="keyboard" class="keyboard"></div>
         </div>
+        <button onclick="message(true)">Win</button>
+        <button onclick="message(false)">Lose</button>
     </body>
 
 </html>
