fix mobile layout spoilt by loading pictues

--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
 
+        <!-- preload pictures -->
+        <link rel="preload" href="img/s0.jpg" as="image">
+        <link rel="preload" href="img/s1.jpg" as="image">
+        <link rel="preload" href="img/s2.jpg" as="image">
+        <link rel="preload" href="img/s3.jpg" as="image">
+        <link rel="preload" href="img/s4.jpg" as="image">
+        <link rel="preload" href="img/s5.jpg" as="image">
+        <link rel="preload" href="img/s6.jpg" as="image">
+        <link rel="preload" href="img/s7.jpg" as="image">
+        <link rel="preload" href="img/s8.jpg" as="image">
+        <link rel="preload" href="img/s9.jpg" as="image">
+
 
         <meta http-equiv="X-Ua-Compatible" content="IE=edge,chrome=1">
         <link rel="stylesheet" href="style.css" type="text/css">
