fixing working with break line passwd

--- a/index.html
+++ b/index.html
@@ -28,16 +28,14 @@
     </head>
     <body>
         <div id="passwd">
-            <!-- --BC---- -------A ---- -->
         </div>
         <div id="game">
             <div id="picture">
-                <img src="img/s0.jpg">
             </div>
         <div id="keyboard"></div>
         </div>
-        <!-- <button onclick="message(true)">Win</button>
-        <button onclick="message(false)">Lose</button> -->
+        <button onclick="message(true)">Win</button>
+        <button onclick="message(false)">Lose</button>
     </body>
 
 </html>
