fix too big keyboard on mobile

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             </div>
         <div id="keyboard"></div>
         </div>
-        <button onclick="message(true)">Win</button>
-        <button onclick="message(false)">Lose</button>
+        <!--  <button onclick="message(true)">Win</button>
+        <button onclick="message(false)">Lose</button> -->
     </body>
 
 </html>
